fix(accordion): improve font smoothing and input styling for better compatibility on iOS

--- a/src/scss/4_components/elements/_accordion.scss
+++ b/src/scss/4_components/elements/_accordion.scss
@@ -19,6 +19,14 @@
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem 0;
+
+    /* Corrects font smoothing for webkit */
+    -webkit-font-smoothing: inherit;
+    -moz-osx-font-smoothing: inherit;
+
+    /* Corrects inability to style clickable `input` types in iOS */
+    -webkit-appearance: none;
+    appearance: none;
   }
 
   &__title {
